@@ -25,12 +25,13 @@
 package net.fabricmc.loom.configuration.providers.mappings;
 
 import java.util.List;
+import java.util.Locale;
 
 import net.fabricmc.loom.api.mappings.layered.spec.MappingsSpec;
 
 public record LayeredMappingSpec(List<MappingsSpec<?>> layers) {
 	public String getVersion() {
 		// TODO something better?
-		return "layered+hash.%d".formatted(Math.abs(hashCode()));
+		return String.format(Locale.ENGLISH, "layered+hash.%d", Math.abs(hashCode()));
 	}
 }
