@@ -31,6 +31,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.HashMap;
+import java.util.Locale;
 import java.util.Map;
 import java.util.jar.Attributes;
 import java.util.jar.JarOutputStream;
@@ -116,7 +117,7 @@ public final class LoomCFRDecompiler implements LoomDecompiler {
 					builder.append("\t").append(src).append("\t").append(dst).append("\n");
 				}
 
-				writer.write("%s\t%d\t%d\n".formatted(name, maxLine, maxLineDest));
+				writer.write(String.format(Locale.ENGLISH, "%s\t%d\t%d\n", name, maxLine, maxLineDest));
 				writer.write(builder.toString());
 				writer.write("\n");
 			}
